[metadata]
name            = django-jsonsuit
author          = Marc Zimmermann
author-email    = tooreht@gmail.com
summary         = Django goodies to dress JSON data in a suit
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.9
project_urls =
    Source Code = https://github.com/tooreht/django-jsonsuit
license = MIT
classifier = 
    Development Status :: 3 - Alpha
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords =
    django-jsonsuit, django, json, suit

[wheel]
universal = 1

[flake8]
ignore = D203
exclude =
    .git,
    .tox,
    build,
    dist
max-line-length = 119

[zest.releaser]
python-file-with-version = jsonsuit/__init__.py
